# ComfyUI-Deadline-Plugin

./: .gitignore  LICENSE  README.md  __init__.py  deadline_api.py  deadline_submit.py  example_extra_model_paths.yaml  pyproject.toml  requirements.txt
custom_nodes/deadline_submission/: README.md  __init__.py
plugins/ComfyUI/: ComfyUI.param  ComfyUI.py
scripts/: copy_comfy_to_local.ps1  copy_comfy_to_network.ps1  copy_models_to_local.ps1
