[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-deadline-plugin"
version = "1.0.0"
description = "ComfyUI plugin for submitting workflows to Thinkbox Deadline for distributed rendering"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dominik Bargiel", email = "dominikbargiel97@gmail.com"}
]
keywords = ["comfyui", "deadline", "rendering", "distributed", "workflow", "manager", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/ComfyUI-Deadline-Plugin"
Repository = "https://github.com/YOUR_USERNAME/ComfyUI-Deadline-Plugin"
Issues = "https://github.com/YOUR_USERNAME/ComfyUI-Deadline-Plugin/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_nodes*"]

[comfyui]
PublisherId = "YOUR_USERNAME"
DisplayName = "ComfyUI Deadline Submission"
Icon = "" 